--- a/DisableNvidiaTelemetry/App.config
+++ b/DisableNvidiaTelemetry/App.config
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
     <startup> 
         
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+  <log4net>
+    <appender name="test" type="log4net.Appender.RollingFileAppender">
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <file type="log4net.Util.PatternString" value="%property{LogDirectory}\" />
+      <datePattern value="yyyy-MM-dd'.log'" />
+      <staticLogFileName value="false" />
+      <appendToFile value="true" />
+      <rollingStyle value="Composite" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <layout type="log4net.Layout.PatternLayout">
+        <header value="[BEGIN LOGGING AT %date{yyyy-MM-dd HH:mm:ss}]%newline%property{HeaderInfo}%newline"
+                type="log4net.Util.PatternString" />
+        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss}] [%level] - %message%newline" />
+        <footer value="[END LOGGING AT %date{yyyy-MM-dd HH:mm:ss}]%newline" type="log4net.Util.PatternString" />
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="test" />
+    </root>
+  </log4net>
 </configuration>
