Refactored telemetry controls

--- a/DisableNvidiaTelemetry/DisableNvidiaTelemetry.csproj
+++ b/DisableNvidiaTelemetry/DisableNvidiaTelemetry.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITelemetry.cs" />
     <Compile Include="Forms\FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
