--- a/DisableNvidiaTelemetry/App.config
+++ b/DisableNvidiaTelemetry/App.config
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
-    <startup> 
-        
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+  <startup>
+
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
   <log4net>
     <appender name="test" type="log4net.Appender.RollingFileAppender">
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
