--- a/DisableNvidiaTelemetry/App.config
+++ b/DisableNvidiaTelemetry/App.config
@@ -1,15 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
-  <startup>
-
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
-  </startup>
   <log4net>
-    <appender name="test" type="log4net.Appender.RollingFileAppender">
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <file type="log4net.Util.PatternString" value="%property{LogDirectory}\" />
       <datePattern value="yyyy-MM-dd'.log'" />
@@ -25,9 +21,22 @@
         <footer value="[END LOGGING AT %date{yyyy-MM-dd HH:mm:ss}]%newline" type="log4net.Util.PatternString" />
       </layout>
     </appender>
-    <root>
+    <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
+      <param name="ApplicationName" value="Disable Nvidia Telemetry" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss}] [%level] - %message%newline" />
+      </layout>
+    </appender>
+    <logger name="FileLogger">
       <level value="ALL" />
-      <appender-ref ref="test" />
-    </root>
+      <appender-ref ref="LogFileAppender" />
+    </logger>
+    <logger name="EventLogger">
+      <level value="ALL" />
+      <appender-ref ref="EventLogAppender" />
+    </logger>
   </log4net>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
 </configuration>
