--- a/DisableNvidiaTelemetry/App.config
+++ b/DisableNvidiaTelemetry/App.config
@@ -3,6 +3,9 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DisableNvidiaTelemetry.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -39,4 +42,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+  <userSettings>
+    <DisableNvidiaTelemetry.Properties.Settings>
+      <setting name="StartupUpdate" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </DisableNvidiaTelemetry.Properties.Settings>
+  </userSettings>
 </configuration>
