--- a/DisableNvidiaTelemetry/DisableNvidiaTelemetry.csproj
+++ b/DisableNvidiaTelemetry/DisableNvidiaTelemetry.csproj
@@ -69,7 +69,11 @@
     <Reference Include="Microsoft.Win32.TaskScheduler, Version=2.5.24.0, Culture=neutral, PublicKeyToken=0d013ddd5178a2ae, processorArchitecture=MSIL">
       <HintPath>..\packages\TaskScheduler.2.5.24\lib\net35\Microsoft.Win32.TaskScheduler.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Drawing" />
@@ -84,6 +88,7 @@
     <Compile Include="Forms\FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="PortableSettingsProvider.cs" />
     <Compile Include="Utilities\BootTaskUtilities.cs" />
     <Compile Include="Utilities\NvidiaController.cs" />
     <Compile Include="Program.cs" />
@@ -96,6 +101,7 @@
       <DependentUpon>TelemetryControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Utilities\Logging.cs" />
+    <Compile Include="Utilities\UpdaterUtilities.cs" />
     <EmbeddedResource Include="Forms\FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
