--- a/DisableNvidiaTelemetry/packages.config
+++ b/DisableNvidiaTelemetry/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
   <package id="TaskScheduler" version="2.5.24" targetFramework="net35" requireReinstallation="true" />
 </packages>
