Logging option + disable portable build logging

--- a/DisableNvidiaTelemetry/App.config
+++ b/DisableNvidiaTelemetry/App.config
@@ -48,6 +48,9 @@
       <setting name="BackgroundTaskTrigger" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="FileLogging" serializeAs="String">
+        <value>True</value>
+      </setting>
     </DisableNvidiaTelemetry.Properties.Settings>
   </userSettings>
 </configuration>
