--- a/DisableNvidiaTelemetry/Properties/Settings.settings
+++ b/DisableNvidiaTelemetry/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="BackgroundTaskTrigger" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="FileLogging" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
