--- a/DisableNvidiaTelemetry/App.config
+++ b/DisableNvidiaTelemetry/App.config
@@ -1,51 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <sectionGroup name="userSettings"
-                  type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="DisableNvidiaTelemetry.Properties.Settings"
-               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-               allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="DisableNvidiaTelemetry.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <file type="log4net.Util.PatternString" value="%property{LogDirectory}\" />
-      <datePattern value="yyyy-MM-dd'.log'" />
-      <staticLogFileName value="false" />
-      <appendToFile value="true" />
-      <rollingStyle value="Composite" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="5MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file type="log4net.Util.PatternString" value="%property{LogDirectory}\"/>
+      <datePattern value="yyyy-MM-dd'.log'"/>
+      <staticLogFileName value="false"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Composite"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="5MB"/>
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[BEGIN LOGGING AT %date{yyyy-MM-dd HH:mm:ss}]%newline%property{HeaderInfo}%newline"
-                type="log4net.Util.PatternString" />
-        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss}] [%level] - %message%newline" />
-        <footer value="[END LOGGING AT %date{yyyy-MM-dd HH:mm:ss}]%newline" type="log4net.Util.PatternString" />
+        <header value="[BEGIN LOGGING AT %date{yyyy-MM-dd HH:mm:ss}]%newline%property{HeaderInfo}%newline" type="log4net.Util.PatternString"/>
+        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss}] [%level] - %message%newline"/>
+        <footer value="[END LOGGING AT %date{yyyy-MM-dd HH:mm:ss}]%newline" type="log4net.Util.PatternString"/>
       </layout>
     </appender>
     <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
-      <param name="ApplicationName" value="Disable Nvidia Telemetry" />
+      <param name="ApplicationName" value="Disable Nvidia Telemetry"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss}] [%level] - %message%newline" />
+        <conversionPattern value="[%date{yyyy-MM-dd HH:mm:ss}] [%level] - %message%newline"/>
       </layout>
     </appender>
     <logger name="FileLogger">
-      <level value="ALL" />
-      <appender-ref ref="LogFileAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="LogFileAppender"/>
     </logger>
     <logger name="EventLogger">
-      <level value="ALL" />
-      <appender-ref ref="EventLogAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="EventLogAppender"/>
     </logger>
   </log4net>
   <startup>
 
-    <supportedRuntime version="v2.0.50727" />
-  </startup>
+    
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
   <userSettings>
     <DisableNvidiaTelemetry.Properties.Settings>
       <setting name="StartupUpdate" serializeAs="String">
