--- a/DisableNvidiaTelemetry/packages.config
+++ b/DisableNvidiaTelemetry/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
-  <package id="ExtendedVersion" version="1.0.1" targetFramework="net45" />
-  <package id="log4net" version="2.0.8" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
-  <package id="TaskScheduler" version="2.5.24" targetFramework="net45" />
+  <package id="ExtendedVersion" version="1.0.1" targetFramework="net452" />
+  <package id="FontAwesome5.WPF" version="1.0.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
+  <package id="TaskScheduler" version="2.5.24" targetFramework="net452" />
 </packages>
